Refactor datatoDB documentation for clarity and remove obsolete warnings